edit stone rose

--- a/stone-rose.html
+++ b/stone-rose.html
@@ -60,7 +60,7 @@ molting the brain and sending shivers up and down my spine.
 Climbing and playing on this liminal skeleton 
 made out of dust and 
 FUBAR, another spectrum opened up for me.
-I felt betrayed by my eyes and a relentless urge to rid myself of alien matter, 
+I felt betrayed by my eyes and a relentless urge to rid myself of alien matter
 released the superhuman powers of speed, strength and agility 
 to pull them out of their sockets.
 With the sensation of cold blood cords dangling across my face, I 
@@ -95,7 +95,7 @@ which maybe served as shock absorption
 and as an extra sealant against contamination
 that could bleed through the small orifice, which was giving access on the tapered side. 
 The other side was engraved with inscriptions 
-and I felt the phonetic hieroglyphs, representing
+and I felt the phonetic hieroglyphs, symbolizing 
 a precise manual to guide you safe and sound to the afterlife.
 After scratching the ice from the dust-stained glass pane with my fringed fingernails, 
 the unflattering picture of a shock frozen mummy
@@ -108,7 +108,7 @@ which controlled the pulse of the artifice in an obscure rhythm.
 In total it resembled an overpriced 'DIY' kit, 
 which in truth just requires blunt assemblage, 
 the automated reaction to a simple given task, 
-that come handy in the post-future wars raging in the zone.
+that comes handy in the post-future wars raging in the zone.
 They can be purchased by kids eager pleasing their slave masters, 
 who pay them back only in exposure. 
 Such mobiles brought to you by the sun, 
@@ -121,7 +121,7 @@ that our bones, like magnets, were on a collision course?
 </p>
 
 <p>
-This corpse was clearly mummified to be reaweaken 
+The corpse was clearly mummified to be reaweaken 
 and to fix the hap-hazards of the depreciated bloated construct.
 Had to get away away, but only to run in circles.
 The recurring, once agonizing, loss of direction
@@ -132,50 +132,54 @@ torn spacesuit about 30 yards away. Actually angry about myself, I blare
 "stripping down here in Cyberia?"<br>
 but on further consideration I mumbled remorsefully
 "well, where there's foo, there's fire", and acknowledged
-her late reactions to hyperthermia as not so stupid after all. 
+the late reactions to hyperthermia as not so stupid after all. 
 So on coincide I find the crime scene both here and there, 
 obviously the old puerility of apportion the blame. 
-
-Lost her head here
-And on exhuming I find a crack in her cranium, 
-a deep incision, 
-that reminded me of the medieval practice of opening a vent to drive away evil specter. 
-Jane Doe certainly was once a fit and experienced space explorer, 
-so would this hole have killed her in an instant and
-was deadly on its own?
-Two marbles replace her once moist organs of sight and
+John Dee certainly was once a fit and experienced space explorer, 
+but he lost his head here.
+Two marbles replace the once moist organs of sight and
 stare at me from the astronaut's skull. 
-Disgusted by the foul relic, 
-I decide to go back as the dust yearns for mess, asking for it. 
-Eyes made out of sand would fit my dark holes perfectly,
+Eyes made out of sand would fit my dark holes perfectly, I think to myself,
 but then a wound is superior to protrusion, 
 as it points towards the center of gravity 
 and doesn't brag about its elevated 
 superficial status quo illuminated by the sun. 
 Any excess is garbage, an excrement of earth,  
 for which the sun is to blame. 
+The sun makes us do things, exploiting the soil,
+tirelessly excavating fossil news and 
+lubricant for warmachines.
+Now disgusted by the foul relic, 
+I decide to go back as the dust yearns for mess, asking for it. 
 
-The sun makes us do things.
-Precious stuff is in the soil, 
-but repeatadly excavated, as fossil news, 
-choose death, madness and darkness. 
-lubricant for warmachine.
+
 
 At first I was concerned how to get it out, 
 but then it was easier than thought, 
 as the body was collapsed, more or less 
-dust indistinguishable from the environment.
+indistinguishable from the environment.
+
+
 Piercing her ribcage, I was breaking violently into her
-exploring her trunk, a thin parchment 
+the trunk, a thin parchment 
 barrier preventing the intrusion of dust.
-DNA
+
+
+And on exhuming I find a crack in her cranium, 
+a deep incision, 
+that reminded me of the medieval practice of opening a vent to drive away evil specter, would this hole have killed her in an instant and
+was deadly on its own?
+
+
+
+
 I decided to refigure the corpse in a new angle, 
 which might be more dignified for conversation. 
 connect my fibers to the new mind, in the abdomen?
 near heart?
 But turned out difficult
 not to break into pieces, 
-I hear the ball shank poppin'
+the ball shank 
 bending arms behind her, with palms behind her shoulders and facing downwards,
 to give a bit stability for sitting upright in a X-legged position. 
 </p>
@@ -187,7 +191,7 @@ to give a bit stability for sitting upright in a X-legged position.
 <p>Tunica Albuginea [al″bu-jin´e-ah] of Testis</p>
 <p>the sit'n'wait ambush predator</p>
 <p>strongly densified</p>
-<p>when on E mission.</p>
+<p>on E mission.</p>
 
 <p>
 My body feels like packed in polystyrene, 
