edit stone rose

--- a/stone-rose.html
+++ b/stone-rose.html
@@ -11,7 +11,7 @@
 <div class="container">
 <p>
 The general order in the zone is to 'Stay at home'
-and literally there is no urgent need to go outside,
+and there is no urgent need to go outside,
 as home offers countless amenities and attentive service
 for anybody.
 The normativity of home with its sedating familiarity
@@ -29,8 +29,8 @@ and suffer from ag-uh-ruh-FOE-b-uh. At the beginning of my journey and haunted b
 with every step and every crackle under my feet, 
 which I didn't so much hear but awfully feel, 
 I've expected to be shredded into pieces.
-A walk straight into the mouth of madness 
-that one will otherwise find only in utter cane.
+A walk straight in the mouth of madness 
+that I could find only in utter cane.
 In almost unbearable pain I was tiptoeing 
 over an illusory minefield, 
 brambles tattering my nylons
@@ -135,7 +135,7 @@ but on further consideration I mumbled remorsefully
 the late reactions to hyperthermia as not so stupid after all. 
 So on coincide I find the crime scene both here and there, 
 obviously the old puerility of apportion the blame. 
-John Dee certainly was once a fit and experienced space explorer, 
+John Dee certainly was once a fit and experienced space explorer
 but he lost his head here.
 Two marbles replace the once moist organs of sight and
 stare at me from the astronaut's skull. 
@@ -143,45 +143,37 @@ Eyes made out of sand would fit my dark holes perfectly, I think to myself,
 but then a wound is superior to protrusion, 
 as it points towards the center of gravity 
 and doesn't brag about its elevated 
-superficial status quo illuminated by the sun. 
+superficial status quo, which is additionally illuminated by the sun. 
 Any excess is garbage, an excrement of earth,  
 for which the sun is to blame. 
-The sun makes us do things, exploiting the soil,
-tirelessly excavating fossil news and 
+The sun makes us do things, tirelessly excavating fossil news and 
 lubricant for warmachines.
 Now disgusted by the foul relic, 
 I decide to go back as the dust yearns for mess, asking for it. 
-
-
-
 At first I was concerned how to get it out, 
 but then it was easier than thought, 
-as the body was collapsed, more or less 
+as the body had been already dragged into the mud and 
+was not fully collapsed and more or less
 indistinguishable from the environment.
-
-
-Piercing her ribcage, I was breaking violently into her
-the trunk, a thin parchment 
+On exhuming I'm 
+piercing her ribcage, breaking violently into her
+trunk, now a thin parchment 
 barrier preventing the intrusion of dust.
 
 
-And on exhuming I find a crack in her cranium, 
+connect my fibers to the new mind, in the abdomen?
+
+I decide to reconfigure the mummy in a new angle, 
+which might be more dignified for conversation. 
+But it turns out difficult not to break into pieces, 
+bending arms behind her, with palms behind her shoulders and head upright,
+with the chin parallel to the floor,
+to give a bit stability for sitting upright in a X-legged position. 
+I find a crack in her cranium, 
 a deep incision, 
 that reminded me of the medieval practice of opening a vent to drive away evil specter, would this hole have killed her in an instant and
 was deadly on its own?
 
-
-
-
-I decided to refigure the corpse in a new angle, 
-which might be more dignified for conversation. 
-connect my fibers to the new mind, in the abdomen?
-near heart?
-But turned out difficult
-not to break into pieces, 
-the ball shank 
-bending arms behind her, with palms behind her shoulders and facing downwards,
-to give a bit stability for sitting upright in a X-legged position. 
 </p>
 
 <h6>Haemoglobin</h6> 
@@ -299,10 +291,7 @@ leave me  with irregular scar tissue.
 <p>telling anyway just lies.</p>
 <p>Elon gated holes</p>
 <p></p>
-putrefactive bacterium
 
-hanson, moorhead, bryant. whoami
-shapeshifter, shedding my skin.
 
 <body>
 </html>
