edit stone rose

--- a/stone-rose.html
+++ b/stone-rose.html
@@ -177,10 +177,10 @@ was deadly on its own?
 </p>
 
 <h6>Haemoglobin</h6> 
-<p>the iron transport system</p> 
+<p>The iron transport system</p> 
 <p>needless on</p>
 <p>Oxy gen abundance</p>
-<p>Tunica Albuginea [al″bu-jin´e-ah] of Testis</p>
+<p>Tunica Al″bu-jin´e-ah of Testis</p>
 <p>the sit'n'wait ambush predator</p>
 <p>strongly densified</p>
 <p>on E mission.</p>
@@ -205,7 +205,7 @@ Desire is driving me insane, wants me
 to bow to the doctrine of the image.
 Then this wolf comes along. 
 A hoodlum with a strong and powerful body that holds supernatural sense
-that carries 
+and carries 
 abilities to locate and kill quadrupedals way larger than life itself.
 It sniffs out my pubic hair, which 
 like wires connect what was and what's new. 
@@ -241,42 +241,42 @@ would have helped to avoid
 the negative affect of a long list of casualities. 
 In this animation of screaming
 the gaping hole with fragments of bone, eye and brain tissue
-is clearly visible, surrounded by clotted blood glistening on 
-once neatly styled fair hair.
-
-
-The graphic material displays
-how swelling thickened and bruising from the upper to the lower jaw
-evolves
+is clearly visible, surrounded by dark clotted blood glistening on 
+the neatly styled, once fair, hair.
+The graphic material displays the 
+emergence of thickening skin,
 but it is left open to the power of imagination, how 
-the contour of the face will grotesquely evolve over time.
+the contour of the face will turn into the grotesque mask of death.
 
-One can only speculate how the mass of defaced flesh will
-develop in all colors within the 
-rich spectrum of a rainbow, which are difficult to define and 
-and draw a precise line from a purple center.
-
-
-Not shown is also the point of penetratation of the 
-difficult to capture the fleeting instant,  
-live
-when the bullet hits the bone already over. 
-
+ 
+how the mass of defaced flesh will develop in all colors within the 
+rich spectrum of a rainbow, 
+which it a more tricky question
+where to draw the lines and how 
+to define
+from the purple center.
 </p>
-
 
 <p>
 I can feel he is observing my reaction, his eyes piercing
 my downcast look in an unapologetic way
 and I try to conceal my sexual arousal 
-by cleaning away rotten flesh and feces underneath my fringed nails. 
-
-Close now, I'm inhaling  the vapor coming from his enourmous scent gland
+by cleaning away rotten flesh and feces underneath my fringed nails, still 
+meditating on bones.<br>
+"O Cephalophore, o cephalophore
+where to put the precious spore?"<br>
+Standing so close now, I'm inhaling  the vapor coming from his enourmous scent gland, 
 a pleasant smell of semen and crude oil.
 Still dazed from the only just and imminent eruption of violence
 common among ghouls, I remember reading that 
 trauma changes sexuality and opens new possibilities. 
-Far from reality I'm 
+
+
+Not shown is also the point of penetratation of the 
+difficult to capture the fleeting instant,  
+when the bullet hits the bone already over. 
+
+
 speculating to be able to touch and inspect the ripples forming in his upper maw. 
 His rough tongue, 
 washing away the scum that sin deposits in the wounds of the weak soul .
@@ -285,12 +285,11 @@ leave me  with irregular scar tissue.
 </p>
 
 <h6>Wolf, all about wolves</h6>
-<p>O Cephalophore, o cephalophore</p>
-<p>where to put the precious spore?</p>
-<p>maybe in ur marooned eyes</p>
+<p>Marooned eyes</p>
 <p>telling anyway just lies.</p>
-<p>Elon gated holes</p>
-<p></p>
+control the expulsion
+<p>the residual semi-solid waste from the Ring</p>
+<p>Elon gated holes.</p>
 
 
 <body>
