edit stone rose

--- a/stone-rose.html
+++ b/stone-rose.html
@@ -30,7 +30,7 @@ with every step and every crackle under my feet,
 which I didn't so much hear but awfully feel, 
 I've expected to be shredded into pieces.
 A walk straight in the mouth of madness 
-that I could find only in utter cane.
+that I could only find in utter cane.
 In almost unbearable pain I was tiptoeing 
 over an illusory minefield, 
 brambles tattering my nylons
@@ -55,7 +55,7 @@ too late to trigger the scram procedure.
 In this theatre of operation
 the enemy's secret weapon is a trillionth of a rock, 
 stuff, you can actually 'see' if you just look close enough. 
-The technology penetrating the flesh directly through the vein, 
+The technology was penetrating the flesh directly through the vein, 
 molting the brain and sending shivers up and down my spine. 
 Climbing and playing on this liminal skeleton 
 made out of dust and 
@@ -106,9 +106,9 @@ Further the glass tomb was filled with wired electronical components,
 such as a Texas Instruments 555 timer chip, 
 which controlled the pulse of the artifice in an obscure rhythm.
 In total it resembled an overpriced 'DIY' kit, 
-which in truth just requires blunt assemblage, 
-the automated reaction to a simple given task, 
-that comes handy in the post-future wars raging in the zone.
+which in truth just requires blunt assemblage.
+The automated reaction to a simple given task is 
+an accomplishment in the post-future wars, that are raging in the zone.
 They can be purchased by kids eager pleasing their slave masters, 
 who pay them back only in exposure. 
 Such mobiles brought to you by the sun, 
@@ -137,7 +137,7 @@ So on coincide I find the crime scene both here and there,
 obviously the old puerility of apportion the blame. 
 John Dee certainly was once a fit and experienced space explorer
 but he lost his head here.
-Two marbles replace the once moist organs of sight and
+Two marbles replace his once moist organs of sight, which
 stare at me from the astronaut's skull. 
 Eyes made out of sand would fit my dark holes perfectly, I think to myself,
 but then a wound is superior to protrusion, 
@@ -147,33 +147,29 @@ superficial status quo, which is additionally illuminated by the sun.
 Any excess is garbage, an excrement of earth,  
 for which the sun is to blame. 
 The sun makes us do things, tirelessly excavating fossil news and 
-lubricant for warmachines.
+lubricants for warmachines.
 Now disgusted by the foul relic, 
 I decide to go back as the dust yearns for mess, asking for it. 
 At first I was concerned how to get it out, 
 but then it was easier than thought, 
-as the body had been already dragged into the mud and 
-was not fully collapsed and more or less
+as the body had been previously dragged into the mud and therefore
+not fully collapsed and more or less
 indistinguishable from the environment.
 On exhuming I'm 
 piercing her ribcage, breaking violently into her
-trunk, now a thin parchment 
-barrier preventing the intrusion of dust.
-
-
-connect my fibers to the new mind, in the abdomen?
-
+trunk, now only coated by a thin parchment
+barrier, preventing the intrusion of dust.
+How to connect my fibers to the new mind, the abdomen?
 I decide to reconfigure the mummy in a new angle, 
 which might be more dignified for conversation. 
-But it turns out difficult not to break into pieces, 
-bending arms behind her, with palms behind her shoulders and head upright,
-with the chin parallel to the floor,
-to give a bit stability for sitting upright in a X-legged position. 
+But it turns out difficult not to break into pieces,
+keeping the head upright, so the chin is parallel to the floor.
+Thumb and index finger are pressed together,
+to find stability in a X-legged position. 
 I find a crack in her cranium, 
 a deep incision, 
 that reminded me of the medieval practice of opening a vent to drive away evil specter, would this hole have killed her in an instant and
 was deadly on its own?
-
 </p>
 
 <h6>Haemoglobin</h6> 
@@ -269,15 +265,10 @@ Standing so close now, I'm inhaling  the vapor coming from his enourmous scent g
 a pleasant smell of semen and crude oil.
 Still dazed from the only just and imminent eruption of violence
 common among ghouls, I remember reading that 
-trauma changes sexuality and opens new possibilities. 
+trauma changes sexuality. 
 
-
-Not shown is also the point of penetratation of the 
-difficult to capture the fleeting instant,  
-when the bullet hits the bone already over. 
-
-
-speculating to be able to touch and inspect the ripples forming in his upper maw. 
+Left only with possibilities and speculations
+to be able to touch and inspect the ripples forming in his upper maw. 
 His rough tongue, 
 washing away the scum that sin deposits in the wounds of the weak soul .
 An event of anomaly, that would 
