edit stone rose

--- a/stone-rose.html
+++ b/stone-rose.html
@@ -207,7 +207,7 @@ It sniffs out my pubic hair, which
 like wires connect what was and what's new. 
 I know he gets me with  
 his long boney snout and a nose, like strong rubber,
-indicating a large brain capacity and a keen sense of smell.
+which indicate a large brain capacity and a keen sense of smell.
 A combo, readily capable of decrypting a burning and uncomfortable truth.
 </p>
 
@@ -238,19 +238,15 @@ the negative affect of a long list of casualities.
 In this animation of screaming
 the gaping hole with fragments of bone, eye and brain tissue
 is clearly visible, surrounded by dark clotted blood glistening on 
-the neatly styled, once fair, hair.
+the once neatly styled fair hair.
 The graphic material displays the 
 emergence of thickening skin,
 but it is left open to the power of imagination, how 
-the contour of the face will turn into the grotesque mask of death.
-
- 
-how the mass of defaced flesh will develop in all colors within the 
-rich spectrum of a rainbow, 
-which it a more tricky question
+the contour of the face will turn into a grotesque mask of death.
+The mass of defaced flesh will certainly develop all colors within the 
+rich spectrum of a rainbow, posing a more tricky question of
 where to draw the lines and how 
-to define
-from the purple center.
+to define the purple center.
 </p>
 
 <p>
@@ -261,7 +257,8 @@ by cleaning away rotten flesh and feces underneath my fringed nails, still
 meditating on bones.<br>
 "O Cephalophore, o cephalophore
 where to put the precious spore?"<br>
-Standing so close now, I'm inhaling  the vapor coming from his enourmous scent gland, 
+I hallucinate, 
+standing so close now, that I'm inhaling  the vapor coming from his enourmous scent gland, 
 a pleasant smell of semen and crude oil.
 Still dazed from the only just and imminent eruption of violence
 common among ghouls, I remember reading that 
@@ -274,14 +271,14 @@ washing away the scum that sin deposits in the wounds of the weak soul .
 An event of anomaly, that would 
 leave me  with irregular scar tissue. 
 </p>
-
+<-----
 <h6>Wolf, all about wolves</h6>
 <p>Marooned eyes</p>
 <p>telling anyway just lies.</p>
 control the expulsion
 <p>the residual semi-solid waste from the Ring</p>
 <p>Elon gated holes.</p>
-
+--->
 
 <body>
 </html>
