add et-genius.jpg clou-crash.jpg

--- a/stone-rose.html
+++ b/stone-rose.html
@@ -244,7 +244,7 @@ emergence of thickening skin,
 but it is left open to the power of imagination, how 
 the contour of the face will turn into a grotesque mask of death.
 The mass of defaced flesh will certainly develop all colors within the 
-rich spectrum of a rainbow, posing a more tricky question of
+rich spectrum of a rainbow, posing the more tricky question of
 where to draw the lines and how 
 to define the purple center.
 </p>
@@ -263,7 +263,6 @@ a pleasant smell of semen and crude oil.
 Still dazed from the only just and imminent eruption of violence
 common among ghouls, I remember reading that 
 trauma changes sexuality. 
-
 Left only with possibilities and speculations
 to be able to touch and inspect the ripples forming in his upper maw. 
 His rough tongue, 
@@ -271,14 +270,13 @@ washing away the scum that sin deposits in the wounds of the weak soul .
 An event of anomaly, that would 
 leave me  with irregular scar tissue. 
 </p>
-<!-----
+
 <h6>Wolf, all about wolves</h6>
 <p>Marooned eyes</p>
 <p>telling anyway just lies.</p>
 control the expulsion
 <p>the residual semi-solid waste from the Ring</p>
 <p>Elon gated holes.</p>
----!>
 
 <body>
 </html>
