--- a/kubany.html
+++ b/kubany.html
@@ -10,15 +10,36 @@
 <body>
 <div class="container">
 
-Washington sent me on a trip to investigate the recent paranormal events, 
-the inexplicable missing of astronauts. 
+<p>
+This palimpsest is an attempt to describe 
+the events that happened in the fall of 2022.
+I had to recall with carbon graphite due 
+malfunction
+
+Washington sent me on a research trip to investigate recent paranormal incidents, 
+which had to do with the inexplicable missing of astronauts. 
 But what I found there in the sand of the burning heat desert, 
 was beyond any comprehension.
-
-I was sent to this unpleasant mission because of my indiginous blood
-that was apparently ingrained with the land 
+I have to add that I was sent to this unpleasant mission 
+because of my blood.
+that I share with my indiginous ancestors, who lived on this land 
+for many generations.
+I became ingrained, whether I like it or not, 
 but in truth they wanted to get rid of me, 
-as I'm apparently not fit for working in the pentagon, just for that reason.
+as I'm apparently not fit for working in the office, 
+as my mental functions, such as perception, memory and attention
+vision, movement, sensation, coordination
+did not match the requirements of the Pentagon.
+even though I'm much more qualified than those hoes.
+I am classified as genetic trash even though
+
+My machine vision on my left eye, on this geometric field of the chess game
+random rectangles in different sizes with colors from the RGB spectrum
+my hearing performance is extraordinary
+interpretation sounds ghosts.
+
+The frames
+cataclysmic
 
 The expedition together with Erin Bryant, a scientist,
 because of her extensive academic background.
@@ -26,27 +47,76 @@ I'm trying to retell the strange events here, but the real horrors I've experien
 not able to put into words. 
 We became pawns in a much larger conflict and came to trust only our instincts. 
 pundit*kr(K ZZ
-
-
-The smell
 We had only nonlethal weapons with us,
 for example a acoustic hailing and disruption (AHAD) device,
 delayed auditory feedback (DAF),
 to shut her up. 
+</p>
+
+<p>
+the huhu and the squirrel monkey.
+
+call de loupe
+From afar we see this gigantic green mountain
+and a footpath drawn into a virgin forest. 
+On our way I notice a goshawk, 
+motionless in the sky, fell from the sky, never to be seen 
+I wait, kept disappearing.
+The silence in there, as without life
+An inaudible enormous noise drove us mad, 
+in deep outer space, a vacuum which was actually full
+with stuff we couldn't perceive. 
+
+not go completely crazy, not part of the environment
+I kicked a piece of wood, which I assumed to be dead, to make a 
+gruesome finding. 
+A teeming mass of now open cells in 
+a structure of magnificent civil engineering  countless
+wander past antigen-presenting cells 
+each? many of them carrying eggs?, always on the lookout
+for the right binding parnter for their antigen receptor.  
+
+I walk past Symbols on the mighty trees., what do they signify
+4 - the orange graphity tells, and I feel strangely alarmed
+
+So I'm occupied with investigatin another strange structure
+a massive flying swarm comes from behind
+Still shocked, I decide  to re-enter the main path
+just a few steps on, I discover their potential nutrition source
+a small field of ugly plants, flowering magenta.
+I can't tell what repels me, they don't belong in there?
+their uncontrolled growth ? or, better put, if I look closer. 
+what gross things I could find there? 
+I walk deeper in the forest, always further drawn into it
+with the faith in me
+there must be some point of reference.
+
+A couple, not asking them
+a futurist biker
+I see a house, a manor house, beyond the trees
+hallucination.
+
+rudolf schlichter
+des sichtbaren, retor l'ordre ZZordnung vs collage, unordnung
 
 
-By the time it dawned on me, that some of the absurd puns
+
+
+
+Over time it dawned on me, that some of the absurd puns
 of my granfather, belonged to a far much greater story.
 
 Puzzle fragments that now revealed horrific whole. 
 However, there are some loopholes, I can only speculate about,
 and mythical stories. 
-born at the deep forest at the foot 
+born at the deep forest at the foot
 of the majestic Kubany in the region of Sumava, he still knew about the 
 rites of the Old Ones. 
 My grandpa knew that when there will 
 be no distinction between man and woman, 
 this will be the end of days of the world.
+Culture is dead, graphity, on the ramshackle mansion, nearby the 
+warm moldau, 
 
 writing, alien
 mesolithikum, wälder nach der eiszeit
@@ -118,13 +188,13 @@ hotbed, tangled
 rivers with distinct features
 fossils
 
-
 This forest seemed to be untouched for 300million years.
 unbelievable any advanced civilisation, lived there, 
 beyond any scientific evidence. 
 
+The smell of green slime, no sound, just simulating energy.
 
-The freakish apes
+The freakish alien apes
 had a variety of extremities, like tentacles they were
 growing out of their meaty bodies. 
 4 of them equipped with further 5 smaller tentacles,
@@ -132,7 +202,8 @@ and one of them a thicker one, which was distinctively sticking out
 on one side of their body
 for grasping objects. What was the objective of doing so?
 as they were slowly roaming the land, 
-on only their rear paws, which granted them  majestic buttocks,
+on only their rear paws, unable to walk,
+which granted them  majestic buttocks,
 a padding.
 They enhanced their bodies with technology, 
 the decadent generations mostly for ornamental purpose.
@@ -140,15 +211,14 @@ the decadent generations mostly for ornamental purpose.
 Must been to do with their Degenerated teeth, 
 hard material, like stone, later then metal, which made believe to be 
 immortal and incorruptible.
-
+The graves, Vampire 
+Anna Tant, whiteling
 
 I've witnessed how a weakly looking man, who went by the name John, 
 and who murdered my brother. 
 He strived the woods most lone not with his kin,
-and not killing with his fangs but with
-some artificial thunderbolt
-that was followed
-a sound of horror. 
+and not killing with his fangs but with some artificial thunderbolt
+that was followed by a sound of horror. 
 echo that burnt deeply in the soul of the forest, 
 The abhorrent smell of this creatures, 
 triggered the reflex of flight in us,
@@ -159,6 +229,18 @@ must be that of a maniac.
 The true horror was not eating the flesh, drinking the blood but
 sometimes habbit of skinning as a trophy
 leaving the body to scavengers.
+The scalp was in his possession, to touch it or to handle it 
+only the exact way he wants it. 
+
+high nobility, 
+adolph schwarzenberg, ns regimekriitker?
+lex schwarzenberg.<alles gestohlen>
+äletere linie, frauenberg.
+vampirprinzessin aus krumau, nord-süd richtung skellet
+stein in mundhöhle. kopf zwischen beinen. 
+3 skelette. 3männer.halswirbel fehlen, rituelle
+enthauptung. 
+
 
 Despite middle rank,
 suspiciously by members of the lower ranks
@@ -195,26 +277,68 @@ a settlement for new animals, made a home, just 200 years ago.
 where did those first settlers came from?
 village, gemeinde Pumperle, Kreis Prachatitz
 Wolfsgrub, gemeinde pumperle, (strazny)
+auch schattawa.Vlčí Jámy
 Gemeinde Lenora????? pumperle is next to lenora. 
-
+this is actually HUMwald, 
 strich einheit
 
-farm Schattawa, grassland connecting the farmsteads
-between Kuschwarda.
-
+To the wolf's den only invited, able men,
 Handwerker, weber, schuster, aschenbrenner?
-ausgesucht u. a.
+ausgesucht u. a. (by schwarzenberg?)
 Johann Griedl, Maurer von Christianberg, m. Weib u. 4 Kinder.
+who built house 'beim Grill'
 wald roden?
 
+farm Schattawa, grassland connecting the farmsteads
+between Kuschwarda, a triangle? kubany, christianberg?
+
+so mayrswalden, Glasfabrikant (aufstieg?)
+catholic vs wasp
+lumberjack
+kralik von meyrswalden
+
+from sand to sand.
+but then glasmaker,
+the later decadent 
+was probably the beginning of barbarian culture.
+jetzt schweinfarm? under the skin?
 
 Karl Wiener (vater, von Schreiber des Manuskript)
-Wiener /Griedl= Hausname Simandl
-wenn man mann und frau nicht mehr auseinanderkennt, geht die welt unters
+simon Wiener = Hausname Simandl, poor from Vienna, a vicious cycle. 
+but the brotherhood 7 dwarfs7 dwarfs7 dwarfs7 dwarfs7 dwarfs7 dwarfs7 dwarfs
+are the benefactors of acceleration.
+a brotherhood of 'social change'.
+
+uacceptable immer alte/gleichaltrige weiber
+but the change, not as desired. 
+circle, spiral.
+The greater the group of settlers, 
+the more difficult to capture a masterless woman from afar.
+(unacceptable not married, very powerful but geächtet)
+
+Since everyone is connected, globalization, abomination. 
+
+reproduce, reenact the virtuous and honorific ownership-marriage (runway)
+the abduction from the serail
+brautentführung (then legit, protective mimicry, free
+glauben, das das zum gleichen ende führt (telelogy), 
+desireed consumation rehearsed and put into sequence. 
+
+adel (fremd aber verwandt, handel)
+verteidigung gegen outsider
+unsophisticated common sense of the primitive barbarion apprehends sequences and events.
+only the brave deserve the fair.
+tele-ology (end goal)
+animistic preconseption. 
+patriarchy cancer of warlike community. 
+harem, greater power. >>lesser control of women
+
+
+
+
 wald 200 strich groß?
 gemeinschaftlich aufgeteilt, Allemender
 Filz? wolfgrubenfilz am Zusammenfluß warme und grasige Moldau. 
-Karl Niegl, Johann Niegl, 
 Wellek??
  
 
