update after a long time

--- a/stone-rose.html
+++ b/stone-rose.html
@@ -10,14 +10,17 @@
 <body>
 <div class="container">
 <p>
-The general order in the zone is to 'Stay at home'
+The unspoken rule in the zone is to 'Stay at home'
 and there is no urgent need to go outside,
-as home offers countless amenities and attentive service
-for anybody.
+as home offers countless amenities and attentive service for anybody.
+
+
+
 The normativity of home with its sedating familiarity
 makes a soft and pleasant blanket that 
 spends either cooling or warming effects to 
 automatically temper the ambience.
+
 On the other hand and as a matter of fact, 
 it is not forbidden to transgress and walk on to the border,
 as prohibitions and restrictions are apparently not the policy in the zone.
@@ -105,7 +108,11 @@ indication on how to navigate further and to avoid destiny.
 Further the glass tomb was filled with wired electronical components, 
 such as a Texas Instruments 555 timer chip, 
 which controlled the pulse of the artifice in an obscure rhythm.
-In total it resembled an overpriced 'DIY' kit, 
+
+
+It didn't In total it resemble an overpriced 'DIY' kit, 
+filled with data ghosts, 
+
 which in truth just requires blunt assemblage.
 The automated reaction to a simple given task is 
 an accomplishment in the post-future wars, that are raging in the zone.
@@ -115,6 +122,10 @@ Such mobiles brought to you by the sun,
 with hidden strings and apparently motivated by thin air
 are truly fascinating but unreachable for little ones,
 as they function completey different from tellurian spatio-temporal physical law.
+
+to behave supine and become intimate with brands from the beginning.
+
+
 Anyway, the femur got me to this sterile grave in the first instance.
 Was it blood seepage from broken vessels
 that our bones, like magnets, were on a collision course?
@@ -269,6 +280,20 @@ His rough tongue,
 washing away the scum that sin deposits in the wounds of the weak soul .
 An event of anomaly, that would 
 leave me  with irregular scar tissue. 
+
+
+Why would leap the species barrier strangely familiar with. 
+a cute animal, I couldn't call my own as it belongs to the wild, unleashed markets
+synthetic biology, lured into?
+manufactured for absurd corporate purpose. 
+I wasn't able to connect with reasonable men, to form a relationship, 
+humanoid toys are creepy, and I prefer a play over a game. 
+a cyber-pet, gaining trust through the unconcsious, simultaneously alien and intimate
+Mirror to see the surface of reality,more like obsedian mirror, reflecting
+a soul, a black hole, which reflects the darkness of ourselves in an obsidian mirror, the undercurrents of tellurian life, sex and violence. 
+
+
+
 </p>
 
 <h6>Wolf, all about wolves</h6>
