create branch dev

--- a/kubany.html
+++ b/kubany.html
@@ -16,7 +16,7 @@ on a sunny, hot and dry day,
 which we observed a rather grim territory, 
 which just reflected 
 the binary logic of the multiplicity
-
+bla
 
 
 the too cold and flat continental surfaces
