draft father ted

--- a/father-ted.html
+++ b/father-ted.html
@@ -1,18 +1,44 @@
+Lyndsay, a zoomer, with no fixed address
+and possessed by demons. 
+An inhuman monster
+What has made her to turn to evil? 
+Two sides of evil, positive and negative evil (good and bad)
+
+
+The psychiatrits in the mental institution suggested ergotherapy, 
+the demon 
+a communities history histories can be attached to and carried 
+in perpetuity
+
+A canonical trial, on this supine vessel
+who didn't show interest in "actual" science, 
+interest in neo-platonist Hermeticism, a gnostic mystery cult
+a natural philospher
+
+
+
+in prison a fractious individual due to the supression 
+of sexuality /language. 
+into violent rage
+
+
 Michael Edward "Ted" Prejit 
 was called to exorcize the demons out of 
 12 year old Lyndsay, 
 the Genesis flood.
-
-Lyndsay with no fixed address
-
-
-A large man, with 
+A large man, not obese 
 breathing heavily
+stairs
 
+markings and scars, a memory, stories ingrained in flesh testifies /proves the accuracy, soft body 
+to narrate in sequence, 
 
-The psychiatrits 
-Art therapy, 
-the demon 
+orgone therapy
+
+solar anus
+
+the Duke in the Vampire castle
+
 
 He is the leader of the Army of god. 
 in a futile, eternal battle. within. 
@@ -23,6 +49,10 @@ yea, bring on the biatch then, I don't deserve
 a male compagnion. who cares? you'll hate the germans!!!
 just work and stfu, I don#t need fucking emotions I need AI
 numb, that#s it. 
+
+Lyndsay was unconsciously into Abstract sex and not want to be touched but the soul.But the body and soul intertwined?
+The Work of Art in the Age of Mechanical Reproduction
+the preservation of Notre Dame, but transform
 
 
 Blessed Angel of Death, 
