--- a/father-ted.html
+++ b/father-ted.html
@@ -1,18 +1,74 @@
-Michael Edward "Ted" Prejit 
-was called to exorcize the demons out of 
-12 year old Lyndsay, 
-the Genesis flood.
-
-Lyndsay with no fixed address
-
-
-A large man, with 
+Michael Edward "Ted" Prejit, a large man,
 breathing heavily
-
+was called to exorcize the demons out of 
+12 year old Lyndsay M., 
+the Genesis flood.
+Any access to the opaqueness of her soul, a blackness so dark that swallowed all light, failed by modern science. 
 
 The psychiatrits 
 Art therapy, 
 the demon 
+that it was transistory phase. 
+Daddy
+
+Lyndsay, a bonny lass, with no fixed address,
+confessed that her problem is that she can't think when she is speaking,
+while she is speaking difficulty of crafting sentences that will follow
+"rather talking with my cunt".
+Expressive power of her soul
+brain strata, wired differently
+ancient animal brain, 
+combinatorial grammar is built on it 
+a friction of the unconscious and unconscious, 
+do they correspond?
+how does the unconscious deal with formal articulation?
+
+
+Thinking and crafting sentences at the same time,when body-mind is occupied
+by demonic possession, which interferes instantaneously with language,
+a deep unconscious affair, 
+
+Language is there to solve problems, logic, not to create them.
+ language like vision?
+society, a demoncratic process? playful rules, the law
+
+the demon lives on the event horizon, both the will to live and kill
+on the practical necessity of having demons
+
+Re-Becoming inhuman, is an evolutionary process, 
+redness in face
+from perceiving light, enlightenment, how to perceive threat
+no eyes needed, the vibes, you don't need to see the predator
+is language controlled by influential people? among the educated?
+influenza, the virus accelerates
+in other animals, how did lingo evolve (the whale singing to each other)
+body language, gesture, why did we become stiff instead, made words for it, we
+are the fossils
+a squirrel involves much more meaning for me, others don't know, private key
+grammer is the public key
+the only mammal of not capable of swallowing and vocalizing at the same time, 
+vulnerable to choking, dick in the mouth, shut the fuck up
+so many things in the world, need a sound for it, more knowledge more words
+with the internet sound spreads in an instant
+sounds replaced by the manufacture of speech, to distinguish from the animal
+
+
+It understands that language is futile, 
+a machinic language, placeholder text, a function, to enable
+computer to computer communication, formal code that is alien to the universerse
+
+Images processed by the body, understood in an instant
+metaphors too complex
+subconscious code, not encrypted, a genius code-breaker like Turing
+
+the unconscious is a biological machine/system for operating an animal
+breathing not function of the unconscious? <autonomous system in the brain>
+do plants not have an unconscious?
+
+the unconscious is better to solve math problems, because it sees it as a whole
+how it does it we don't know. 
+
+
 
 He is the leader of the Army of god. 
 in a futile, eternal battle. within. 
@@ -31,3 +87,8 @@ guide me safely to the afterlife.
 
 the shadow of the whip
 mysticism comples relationship to formal law
+
+I've humoured her
+peevishly
+cried
+eschew
