work on multiple branches

--- a/father-ted.html
+++ b/father-ted.html
@@ -4,6 +4,9 @@ An inhuman monster
 What has made her to turn to evil? 
 Two sides of evil, positive and negative evil (good and bad)
 
+preferes the violence of him than her own father, because its more honest, 
+more transparent
+
 
 The psychiatrits in the mental institution suggested ergotherapy, 
 the demon 
